# 008-rov-telemetry-dashboard

./: README.md
backend/: CMakeLists.txt
backend/include/: KalmanFilter.h  NMEAParser.h  PointCloudProcessor.h  SerialPort.h  WebSocketServer.h
backend/src/: KalmanFilter.cpp  NMEAParser.cpp  PointCloudProcessor.cpp  SerialPort.cpp  WebSocketServer.cpp  main.cpp
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  types.ts
frontend/src/components/: AttitudeIndicator.tsx  Dashboard.tsx  DepthGauge.tsx  ErrorBoundary.tsx  SpeedVector.tsx  TerrainExplorer.tsx
frontend/src/hooks/: useTelemetry.ts
frontend/src/styles/: index.css
frontend/src/utils/: colormap.ts  messageParser.ts
